--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "serve": "node -r dotenv/config .env npm run start",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -19,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "format": "prettier --ignore-path ./.gitignore --write \"./**.*.{css,scss,js,ts,json,yaml,md.prettierrc} \" --loglevel silent"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
